--- a/validation.html
+++ b/validation.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" crossorigin="" href="style.css">
   </head>
   <body>
-  <form action="https://submit-form.com/ol58sFOtW" method="post">
+  <form action="https://submit-form.com/T6l1xFxrB" method="post">
     <input
     type="hidden"
     name="_redirect"
